10034
I think he's complaining that the package doesn't evaporate:
```scala
scala> base
<console>:12: error: package base is not a value
       base
       ^
```
